fixed hover color on dark mode

--- a/dark-mode-stuff/dark-mode.css
+++ b/dark-mode-stuff/dark-mode.css
@@ -10,6 +10,9 @@ body.dark-mode td:hover {
 body.dark-mode .marked {
     background-color: rgb(86, 47, 0);
 }
+body.dark-mode .marked:hover {
+    background-color: rgb(112, 77, 31)
+}
 
 body.dark-mode button, body.dark-mode td {
     border-color: rgb(140, 130, 115)
